[package]
name = "pam_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
bindgen = "0.70.1"
chrono = "0.4.38"
dotenv = "0.15.0"
pam = "0.8.0"
reqwest = {version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
